--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -7,25 +7,25 @@
 	<div class="navigation home">
 		<div class="row">
 			<a href="/mla">
-				<img class="btn corner" src="/mla.png"/>
+				<img class="btn corner animated bounceInLeft" src="/mla.png"/>
 			</a>
 
 			<a href="/map">
-				<img class="btn" src="/mapicon.png"/>
+				<img class="btn animated bounceInDown" src="/mapicon.png"/>
 			</a>
 
 			<a href="/observations">
-				<img class="btn" src="/diaryicon.png"/>
+				<img class="btn animated bounceInDown" src="/diaryicon.png"/>
 			</a>
 
 			<a href="/pedometer">
-				<img class="btn corner" src="/footicon.png"/>
+				<img class="btn corner animated bounceInRight" src="/footicon.png"/>
 			</a>
 		</div>
 
 		<div class="row">
 			<a href="/art">
-				<img class="btn logo" src="/dogcommons.png"/>
+				<img class="btn logo animated bounceInUp" src="/dogcommons.png"/>
 			</a>
 		</div>
 	</div>
