--- a/app/client/views/splash/splash.html
+++ b/app/client/views/splash/splash.html
@@ -1,8 +1,6 @@
 <template name="Splash">
-	<div class="splash-bg"></div>
-	<div class="splash">
-		<h1>Nature Heals</h1>
-		<span>Enter</span>
+	<div class="splash-bg">
+		<h1 class="splash">Nature Heals</h1>
+		<h2 class="splash">Enter</h2>
 	</div>
 </template>
-
