link to DC webpage

--- a/app/client/views/art/art.html
+++ b/app/client/views/art/art.html
@@ -1,10 +1,9 @@
 <template name="Art">
 	<div id="message">
-		<p>Nature Heals 30x30 is a month-long event that encourages you to spend 30 minutes in nature each day during the month of October. Learn more by visiting the official website for the 30x30 project. You will be leaving this application. At any time you can hit "done" to return to this application.</p>
+		<p>The Dog Commons is a great place for you to experience nature with your pup! Learn more by visiting the official website for the Dog Commons. You will be leaving this application.</p>
 		<div class="button go">Go to external site</div>
 		<a href="/home">
 			<div class="button back">Go back</div>
 		</a>
 	</div>
 </template>
-
