--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -6,27 +6,17 @@
 
 	<div class="navigation home">
 		<div class="row">
-			<a href="/mla">
-				<img class="btn corner animated bounceInLeft" src="/mla.png"/>
-			</a>
+			<a href="/mla" class="btn corner animated bounceInLeft mla"></a>
 
-			<a href="/map">
-				<img class="btn animated bounceInDown" src="/mapicon.png"/>
-			</a>
+			<a href="/map" class="btn animated bounceInDown map"></a>
 
-			<a href="/observations">
-				<img class="btn animated bounceInDown" src="/diaryicon.png"/>
-			</a>
+			<a href="/observations" class="btn animated bounceInDown diary"></a>
 
-			<a href="/pedometer">
-				<img class="btn corner animated bounceInRight" src="/footicon.png"/>
-			</a>
+			<a href="/pedometer" class="btn corner animated bounceInRight foot"></a>
 		</div>
 
 		<div class="row">
-			<a href="/art">
-				<img class="btn logo animated bounceInUp" src="/dogcommons.png"/>
-			</a>
+			<a href="/art" class="btn logo animated bounceInUp"></a>
 		</div>
 	</div>
 
