--- a/app/client/main.css
+++ b/app/client/main.css
@@ -13,7 +13,7 @@ html {
 	font-family: 'Copse';
 	width: 100vw;
 	height: 100vh;
-	/*background: url('/background.jpg') center center fixed; 
+	/*background: url('/background.jpg') center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -69,7 +69,7 @@ html {
 }
 
 div.button {
-	background-color: #aceee5;
+	background-color: #0c8a3b;
 	box-shadow: 0 3px 5px black;
 	display: inline-block;
 	padding: 10px;
@@ -77,4 +77,3 @@ div.button {
 	position: absolute;
 	color: black;
 }
-
