fix observations route and remove popups

--- a/app/client/views/map/map.html
+++ b/app/client/views/map/map.html
@@ -1,9 +1,8 @@
 <template name="Map">
-	{{#Popup id="map"}}
+	<!-- {{#Popup id="map"}}
 		<p>This is a map of the Minnesota Landscape Arboretum grounds. We have marked some of the most interesting parts of the map. To get some information on the feature just tap on it. Feel free to explore.</p>
-	{{/Popup}}
+	{{/Popup}} -->
 	
 	<div id="map"></div>
 	{{> Header pageTitle='Map'}}
 </template>
-
