--- a/app/client/views/pedometer/pedometer.html
+++ b/app/client/views/pedometer/pedometer.html
@@ -1,8 +1,8 @@
 <template name="Pedometer">
-	{{#Popup id="pedometer"}}
+	<!-- {{#Popup id="pedometer"}}
 		<p>This pedometer works by tracking your geolocation (not exact step count). To use it, hit start. When you do it will start tracking how far you walk on the Arboretum grounds.</p>
 		<p>This information is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else.</p>
-	{{/Popup}}
+	{{/Popup}} -->
 
 	<div class="header-spacer"></div>
 
@@ -28,4 +28,3 @@
 
 	{{> Header pageTitle='Pedometer'}}
 </template>
-
