--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -1,9 +1,9 @@
 <template name="Observations">
-	{{#Popup id="obvservations"}}
+	<!-- {{#Popup id="obvservations"}}
 		<p>Documenting your experiences is a very powerful way to grow closer to nature. Even three simple observations will help you appreciate what is around you.</p>
 		<p>This observation diary is a place to record meaningful moments in nature. You can write about and even include the pictures you've taken all in one place.</p>
 		<p>The information you enter here is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else. Feel free to write about anything you would like.</p>
-	{{/Popup}}
+	{{/Popup}} -->
 	
 	<div class="header-spacer"></div>
 
@@ -52,4 +52,3 @@
 		<div class="photo-delete-button">X</div>
 	</div>
 </template>
-
