--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -4,7 +4,7 @@
 		<p>This observation diary is a place to record meaningful moments in nature. You can write about and even include the pictures you've taken all in one place.</p>
 		<p>The information you enter here is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else. Feel free to write about anything you would like.</p>
 	{{/Popup}} -->
-	
+
 	<div class="header-spacer"></div>
 
 	<div class="obs add">
@@ -42,6 +42,14 @@
 			</div>
 		{{/with}}
 	</div>
+
+	<center>
+		{{#if currentUser}}
+			{{> shareit shareData}}
+		{{else}}
+			{{> loginButtons}}
+		{{/if}}
+	</center>
 
 	{{> Header pageTitle='Observations'}}
 </template>
